# btcagent

./: .gitignore  CMakeLists-Default.txt  CMakeLists.txt  CMakeLists4EmbeddedSystem.txt  CMakeLists4Windows.txt  Config.go  ConfigData.go  ConfigFileDetails.md  Const.go  DownSession.go  DownSessionBTC.go  DownSessionBase.go  DownSessionETH.go  ETHBlock.go  Errors.go  Event.go  ExMessage.go  FakeUpSession.go  FakeUpSessionBTC.go  FakeUpSessionBase.go  FakeUpSessionETH.go  Interface.go  JSONRPC.go  LocalJobETH.go  Main.go  Proxy.go  README-EmbeddedSystem.md  README-Windows.md  README-zhCN.md  README-zh_CN.md  README.md  SessionFactory.go  SessionFactoryBTC.go  SessionFactoryETH.go  SessionIDManager.go  SessionIDManager_test.go  SessionManager.go  StratumJob.go  StratumJobBTC.go  StratumJobETH.go  (+18 more)
.github/workflows/: codeql-analysis.yml
cmake/Modules/: FindGlog.cmake  FindLibEvent.cmake
docs/: ConfigFileDetails-zhCN.md  ConfigFileDetails.md  architecture.graffle
install/: agent.conf  btcagent-multi_user.conf  btcagent-single_user.conf
install/debian-control/: postinst
src/: Common.h  Server.cc  Server.h  Utils.cc  Utils.h  utilities_js.hpp
src/agent/: AgentMain.cc  agent_conf.default.json  agent_conf.json  agent_conf_fixed_worker_name.json
src/bitcoin/: ServerBitcoin.cc  ServerBitcoin.h
src/eth/: ServerEth.cc  ServerEth.h
src/ssl/: SSLUtils.cc  SSLUtils.h
test/: TestMain.cc  TestServer.cc  TestUtils.cc
